Adds code to investigate matching --> Gather distances between paolo annot and stardist centroids and plot histogram

--- a/scripts/crop_cells.ipynb
+++ b/scripts/crop_cells.ipynb
@@ -213,6 +213,8 @@
     "if not os.path.exists(DF_DIR):\n",
     "            os.makedirs(DF_DIR)\n",
     "\n",
+    "dist_paolo_stardist = []\n",
+    "\n",
     "# Loop over all files in target directory\n",
     "for path, filename in zip(image_paths, filenames):\n",
     "    # Load and normalize image stack\n",
@@ -293,6 +295,8 @@
     "        match_centroid = centroids[corresponding_objects[-1]-1] if corresponding_objects[-1] > 0 else (9999, 9999)\n",
     "        strdst_x.append(match_centroid[1])\n",
     "        strdst_y.append(match_centroid[0])\n",
+    "        distance_to_paolo = np.sqrt(((match_centroid[1]- row['x'])**2 + (match_centroid[0] - row['y'])**2))\n",
+    "        dist_paolo_stardist.append(distance_to_paolo)\n",
     "\n",
     "    # Add object ID and centroids to apo annotation dataframe    \n",
     "    apo_annotations['matching_object'] = corresponding_objects\n",
@@ -304,12 +308,38 @@
     "\n",
     "    # Save summary df as CSV\n",
     "    summary_df.to_csv(os.path.join(DF_DIR, f'{filename}_pd_df.csv'), index=False)\n",
+    "\n",
     "    \n",
     "    # Save labels\n",
     "    if SAVE_MASKS:\n",
     "        mask_path = os.path.join(MASK_DIR, f'{filename}.npz')\n",
     "        np.savez_compressed(mask_path, gt=gt_filtered)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create histogram\n",
+    "plt.hist(dist_paolo_Stardist, bins=10, color='blue', edgecolor='black', alpha=0.7)\n",
+    "\n",
+    "# Labels and title\n",
+    "plt.xlabel('Distance')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Histogram of dist_paolo_Stardist')\n",
+    "\n",
+    "# Show plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
