Fixes bugs and adds plots --> removes logging from function --> fixes bugs in function definitions --> adds remaining plots from main script into subscripts

--- a/scripts/01_segment_strdst.ipynb
+++ b/scripts/01_segment_strdst.ipynb
@@ -178,7 +178,6 @@
     "\n",
     "\n",
     "def run_segmentation(path, model, axis_norm):\n",
-    "    logger.info(\"\\tStarting with Stardist segmentation.\")\n",
     "    h2b_imgs = load_image_stack(path)\n",
     "    h2b_imgs_normal = np.asarray([normalize(img, 1, 99.8, axis=axis_norm) for img in h2b_imgs])\n",
     "    \n",
@@ -189,16 +188,15 @@
     "        gt.append(labels)\n",
     "        details.append(det)\n",
     "    gt = np.asarray(gt)\n",
-    "    logger.info(\"\\t\\tSegmentation successful.\")\n",
     "    return gt, details\n",
     "\n",
-    "def filter_segmentation(gt, details):\n",
+    "def filter_segmentation(gt, details, min_size):\n",
     "    logging.info(\"\\tRemoving objects smaller than {MIN_NUC_SIZE}.\")\n",
     "    num_frames = gt.shape[0]\n",
     "    gt_filtered = np.zeros_like(gt, dtype=np.uint16)\n",
     "    df_list = []\n",
     "    for frame in range(num_frames):\n",
-    "        gt_filtered[frame] = remove_small_objects(gt[frame], min_size=MIN_NUC_SIZE)\n",
+    "        gt_filtered[frame] = remove_small_objects(gt[frame], min_size=min_size)\n",
     "        unique_ids = np.unique(gt_filtered[frame])\n",
     "        unique_ids = unique_ids[unique_ids > 0]\n",
     "        x, y = [], []\n",
@@ -316,10 +314,12 @@
     "\n",
     "    ### Stardist nuclei segmentation\n",
     "    # Load and normalize image stack\n",
+    "    logger.info(\"\\tStarting with Stardist segmentation.\")\n",
     "    gt, details = run_segmentation(path, model, axis_norm)\n",
+    "    logger.info(\"\\t\\tSegmentation done.\")\n",
     "\n",
     "    # Remove small objects and create DF with segmentation info (object_id, t, x, y)\n",
-    "    gt_filtered, summary_df = filter_segmentation(gt, details)\n",
+    "    gt_filtered, summary_df = filter_segmentation(gt, details, MIN_NUC_SIZE)\n",
     "    \n",
     "    # Save summary df as CSV\n",
     "\n",
