--- a/scripts/02_tracking_btrack.ipynb
+++ b/scripts/02_tracking_btrack.ipynb
@@ -184,14 +184,14 @@
     "\n",
     "\n",
     "\n",
-    "def run_tracking(gt_filtered, fovX, fovY):\n",
+    "def run_tracking(gt_filtered, fovX, fovY, bt_config_file, track_radius):\n",
     "    logging.info(\"\\tStarting tracking\")\n",
     "    btObj = btrack.utils.segmentation_to_objects(gt_filtered, properties=(\"area\",), assign_class_ID=True)\n",
     "    \n",
     "    with btrack.BayesianTracker() as tracker:\n",
-    "        tracker.configure(BT_CONFIG_FILE)\n",
+    "        tracker.configure(bt_config_file)\n",
     "        tracker.update_method = BayesianUpdates.APPROXIMATE\n",
-    "        tracker.max_search_radius = EPS_TRACK\n",
+    "        tracker.max_search_radius = track_radius\n",
     "        tracker.append(btObj)\n",
     "        tracker.volume = ((0, fovX), (0, fovY))\n",
     "        tracker.track(step_size=100)\n",
@@ -216,7 +216,6 @@
     "    Returns:\n",
     "        np.ndarray: New 3D mask where obj_ids are replaced with track_ids.\n",
     "    \"\"\"\n",
-    "    logger.info(\"\\tConverting Obj_IDs to Track_IDs in stardist masks.\")\n",
     "    \n",
     "    tracked_masks = np.zeros_like(gt_filtered)\n",
     "\n",
@@ -365,7 +364,7 @@
     "\n",
     "    # Run tracking with Btrack\n",
     "    _, fovY, fovX = gt_filtered.shape\n",
-    "    dfBTracks = run_tracking(gt_filtered, fovX, fovY)\n",
+    "    dfBTracks = run_tracking(gt_filtered, fovX, fovY, BT_CONFIG_FILE, EPS_TRACK)\n",
     "    \n",
     "    logger.info(\"\\tMerging information from Btrack and stardist.\")\n",
     "    merged_df = strdst_df.merge(dfBTracks.drop(columns=[\"x\", \"y\", \"area\"]), on=[\"obj_id\", \"t\"], how=\"left\")\n",
@@ -379,6 +378,7 @@
     "    logger.info(f\"\\tSaved merged dfs at: {merge_df_path}\")\n",
     "\n",
     "    ### Create a mask with btrack track_ids instead of stardists obj_ids\n",
+    "    logger.info(\"\\tConverting Obj_IDs to Track_IDs in stardist masks.\")\n",
     "    tracked_masks = convert_obj_to_track_ids(gt_filtered, merged_df)\n",
     "    \n",
     "    # Save masks\n",
@@ -386,6 +386,54 @@
     "    np.savez_compressed(mask_path, gt=tracked_masks)\n",
     "    logger.info(f\"\\t\\tMask saved at: {mask_path}\")\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Count occurrences of each track_id to determine track lengths\n",
+    "track_lengths = merged_df[\"track_id\"].value_counts()\n",
+    "\n",
+    "# Plot histogram\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.hist(track_lengths, bins=20, edgecolor=\"black\", alpha=0.7)\n",
+    "\n",
+    "# Labels and title\n",
+    "plt.xlabel(\"Track Length\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.title(\"Histogram of Track Lengths\")\n",
+    "\n",
+    "# Show plot\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Count occurrences of each track_id to determine track lengths\n",
+    "track_lengths = merged_df_long[\"track_id\"].value_counts()\n",
+    "\n",
+    "# Plot histogram\n",
+    "plt.figure(figsize=(10, 6))\n",
+    "plt.hist(track_lengths, bins=20, edgecolor=\"black\", alpha=0.7)\n",
+    "\n",
+    "# Labels and title\n",
+    "plt.xlabel(\"Track Length\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.title(\"Histogram of Track Lengths\")\n",
+    "\n",
+    "# Show plot\n",
+    "plt.show()"
    ]
   },
   {
