--- a/scripts/03_match_annotations.ipynb
+++ b/scripts/03_match_annotations.ipynb
@@ -475,37 +475,86 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "20.08423130913089"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "np.mean(metrics['dist_alt_matching'])"
+    "### Plot if we want to save"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the output directory\n",
+    "PLOT_DIR = \"/home/nbahou/myimaging/apoDet/data/plots\"\n",
+    "RUN_NAME = \"test\"\n",
+    "\n",
+    "output_dir = os.path.join(PLOT_DIR, RUN_NAME)\n",
+    "os.makedirs(output_dir, exist_ok=True)  # Create directory if it doesn't exist\n",
+    "\n",
+    "# Flatten the distance lists\n",
+    "dist_paolo_stardist_flat = np.concatenate(dist_paolo_stardist).tolist()\n",
+    "dist_alt_matching_flat = np.concatenate(dist_alt_matching).tolist()\n",
+    "\n",
+    "# Create histogram\n",
+    "plt.figure(figsize=(8, 6))\n",
+    "plt.hist(dist_paolo_stardist_flat, bins=25, range=(0, 50), color='blue', edgecolor='black', alpha=0.7)\n",
+    "plt.xlim(0, 50)\n",
+    "\n",
+    "# Labels and title\n",
+    "plt.xlabel('Distance (L2-norm, Pixels)')\n",
+    "plt.ylabel('Frequency')\n",
+    "plt.title('Distances between manual and Stardist centroids')\n",
+    "\n",
+    "# Save the plot\n",
+    "plot_filename = os.path.join(output_dir, \"distances_histogram.png\")\n",
+    "plt.savefig(plot_filename)\n",
+    "\n",
+    "# Optionally, display the plot\n",
+    "plt.show()\n",
+    "\n",
+    "# Close the plot to free up memory\n",
+    "plt.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Ensure lists are NumPy arrays for efficient calculations\n",
+    "dist_paolo_stardist = np.array(dist_paolo_stardist_flat)\n",
+    "dist_alt_matching = np.array(dist_alt_matching_flat)\n",
+    "\n",
+    "# Plot histograms\n",
+    "plt.figure(figsize=(10, 5))\n",
+    "plt.hist(dist_paolo_stardist_flat, bins=30, alpha=0.5, label=\"Original Matching\", color='blue', range=(0, 60))\n",
+    "plt.hist(dist_alt_matching_flat, bins=30, alpha=0.5, label=\"L2 Norm Matching\", color='red', range=(0, 60))\n",
+    "plt.xlabel(\"Distance\")\n",
+    "plt.ylabel(\"Frequency\")\n",
+    "plt.title(\"Comparison of Matching Approaches\")\n",
+    "plt.legend()\n",
+    "\n",
+    "# Save the plot\n",
+    "plot_filename = os.path.join(output_dir, \"matching_comparison_histogram.png\")\n",
+    "plt.savefig(plot_filename)\n",
+    "\n",
+    "# Optionally, display the plot\n",
+    "plt.show()\n",
+    "\n",
+    "# Close the plot to free up memory\n",
+    "plt.close()\n",
+    "\n",
+    "# Print summary statistics\n",
+    "print(\"Original Matching - Mean Distance:\", np.mean(dist_paolo_stardist))\n",
+    "print(\"L2 Norm Matching - Mean Distance:\", np.mean(dist_alt_matching))\n",
+    "print(\"Original Matching - Median Distance:\", np.median(dist_paolo_stardist))\n",
+    "print(\"L2 Norm Matching - Median Distance:\", np.median(dist_alt_matching))\n",
+    "print(\"Original Matching - Min/Max:\", np.min(dist_paolo_stardist), \"/\", np.max(dist_paolo_stardist))\n",
+    "print(\"L2 Norm Matching - Min/Max:\", np.min(dist_alt_matching), \"/\", np.max(dist_alt_matching))\n"
    ]
   }
  ],
