Adds additional save for feature inspection --> save img and mask crops to separate dir --> to investigate which metrics work best for filtering healthy cells

--- a/scripts/04_crop_windows.ipynb
+++ b/scripts/04_crop_windows.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "plaintext"
@@ -92,6 +92,8 @@
     "BAD_CROPS = '../data/apo_crops_bad'\n",
     "WINDOWS_DIR = '/home/nbahou/myimaging/apoDet/data/windows_test'    # Directory with crops for scDINO\n",
     "RANDOM_DIR = os.path.join(WINDOWS_DIR, 'random')\n",
+    "\n",
+    "FEATURE_ANALYSIS = \"/home/nbahou/myimaging/apoDet/data/test_health_filter/feature_analysis\"\n",
     "#CLASS_DCT_PATH = './extras/class_dicts'\n",
     "\n",
     "\n",
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,10 +402,13 @@
     "#print(filenames)\n",
     "\n",
     "# Create directories for saving if they do not exist\n",
-    "output_dirs = [CSV_DIR, MASK_DIR, DF_DIR, CROPS_DIR, WINDOWS_DIR, BAD_CROPS]\n",
+    "output_dirs = [CSV_DIR, MASK_DIR, DF_DIR, CROPS_DIR, WINDOWS_DIR, BAD_CROPS, FEATURE_ANALYSIS]\n",
     "for path in output_dirs:\n",
     "    os.makedirs(path, exist_ok=True)\n",
-    "    \n",
+    "\n",
+    "os.makedirs(os.path.join(FEATURE_ANALYSIS, 'raw_images'), exist_ok=True)\n",
+    "os.makedirs(os.path.join(FEATURE_ANALYSIS, 'masks'), exist_ok=True)\n",
+    "\n",
     "\n",
     "# Frame rate and movie length for crops\n",
     "try:\n",
@@ -602,8 +607,14 @@
     "            mean_solidity = mean_features['solidity']\n",
     "\n",
     "            windows = np.asarray(windows)\n",
+    "\n",
+    "            # Save all crops for features analysis\n",
+    "            tiff.imwrite(os.path.join(FEATURE_ANALYSIS, 'raw_images', f'cell_{filename}_{track_id}.tif'), windows[::step])\n",
+    "            tiff.imwrite(os.path.join(FEATURE_ANALYSIS, 'masks', f'cell_{filename}_{track_id}.tif'), mask_windows[::step])\n",
+    "            \n",
     "            if (mean_eccentricity < 0.4) or (mean_std > 1000) or (mean_intensity > 3000) or (mean_solidity < 0.925):\n",
     "                tiff.imwrite(os.path.join(BAD_CROPS, f'no_apo_{filename}', f'trackID_{track_id}.tif'), windows[::step])\n",
+    "            \n",
     "                \n",
     "            \n",
     "            #tiff.imwrite(os.path.join(CROPS_DIR, f'no_apo_{filename}', f'trackID_{track_id}.tif'), windows[::step])\n",
